# the_artist

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.06389F7927D3B862.idx
debug/: README.MD
debug/tasks/: build  run
spackster/: CMakeLists.txt  README.MD
spackster/tasks/: clean  run  setup
src/: main.cpp
